# aitiguru_test_task

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py
app/models/: __init__.py  database.py
app/orders/: __init__.py  order_schemas.py
app/routers/: __init__.py  orders.py
app/services/: __init__.py  order_service.py
tests/: test_order_service.py
